# hypermodern-python-codym48

./: .python-version  LICENSE  README.md  noxfile.py  pyproject.toml
src/hypermodern_python_codym48/: console.py
tests/: test_console.py  test_wikipedia.py
