[tool.poetry]
name = "hypermodern-python-codym48"
version = "0.1.0"
description = "The hypermodern Python project initialized by Codym48"
authors = ["Cody Martin <codytylermartin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Codym48/hypermodern-python-codym48"
repository = "https://github.com/Codym48/hypermodern-python-codym48"
keywords = ["hypermodern"]
packages = [{include = "hypermodern_python_codym48", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.scripts]
hypermodern-python-codym48 = "hypermodern_python_codym48.console:main"
hypermodern-python-pythonversion = "hypermodern_python_codym48.pythonversion:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
